Contact page changes

--- a/applicant-server/views/contact.ejs
+++ b/applicant-server/views/contact.ejs
@@ -68,7 +68,7 @@
         </div>
     </div>
 </nav>
-<section class="pt-28 bg-gradient-to-r from-blue-100 to-yellow-100">
+<section class="pt-28 bg-gradient-to-r from-blue-100 to-yellow-100 h-[800px]">
 <div class="flex justify-around fade-in bg-gradient-to-r from-blue-700 to-yellow-700 bg-clip-text text-transparent">
     <div class="flex flex-col justify-center font-bold">
         <div><img src="/images/Sarvjeet.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
@@ -107,7 +107,7 @@
 
 </body>
 <footer>
-    <div class="footerbox py-20">
+    <div class="footerbox py-4">
       <p>&copy; 2025 Go Hire. All rights reserved.</p>
     </div>
   </footer>
