--- a/applicant-server/views/search-results.ejs
+++ b/applicant-server/views/search-results.ejs
@@ -205,8 +205,8 @@
     });
 </script>
 </body>
-<footer>
-    <div class="footerbox p-8">
+<footer class="mt-44">
+    <div class="footerbox">
       <p>&copy; 2025 Go Hire. All rights reserved.</p>
     </div>
   </footer>
