--- a/applicant-server/views/contact.ejs
+++ b/applicant-server/views/contact.ejs
@@ -77,13 +77,13 @@
         <div class="ml-12 mt-2">8102109959</div>
     </div>
     <div class="flex flex-col justify-center font-bold">
-        <div><img src="/images/Sarvjeet.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
+        <div><img src="/images/kartik.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
         <div class="ml-6 mt-2">Kartik Raghuvanshi</div>
         <a href="mailto:kartik.r23@iiits.in"><div class="ml-8 mt-2">kartik.r23@iiits.in</div></a>
         <div class="ml-12 mt-2">8269229339</div>
     </div>
     <div class="flex flex-col justify-center font-bold">
-        <div><img src="/images/Sarvjeet.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
+        <div><img src="/images/AnujRathore.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
         <div class="ml-12 mt-2">Anuj Rathore</div>
         <a href="mailto:anuj.r23@iiits.in"><div class="ml-10 mt-2">anuj.r23@iiits.in</div></a>
         <div class="ml-14 mt-2">9340041042</div>
@@ -97,7 +97,7 @@
         <div class="ml-12 mt-2">7283886537</div>
     </div>
     <div class="flex flex-col justify-center font-bold">
-        <div><img src="/images/Sarvjeet.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
+        <div><img src="/images/likhitha.jpg" alt="Trophy and competition" class="h-[200px] w-[200px] object-contain rounded-full"></div>
         <div class="ml-12 mt-2">Bandi Likhitha</div>
         <a href="mailto:likhitha.b23@iiits.in"><div class="ml-6 mt-2">likhitha.b23@iiits.in</div></a>
         <div class="ml-14 mt-2">7093630717</div>
