--- a/applicant-server/views/home.ejs
+++ b/applicant-server/views/home.ejs
@@ -32,7 +32,7 @@
 
 <header class="pt-32 pb-24 bg-gradient-to-br from-blue-600 via-blue-700 to-blue-500 text-white relative overflow-hidden">
     <div class="absolute inset-0 bg-pattern opacity-10"></div>
-    <div class="container mx-auto px-6 relative z-10">
+    <div class="container mx-auto px-6 relative">
         <div class="flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 text-center md:text-left transform transition-all duration-700 translate-y-8 opacity-0 text-black" id="header-text">
                 <h1 class="text-5xl font-bold leading-tight">Unlock Your <span class="text-yellow-300">Career</span> Potential</h1>
