--- a/applicant-server/views/search-results.ejs
+++ b/applicant-server/views/search-results.ejs
@@ -13,7 +13,7 @@
         <a href="/" class="text-black text-3xl font-bold transition-transform hover:scale-105 duration-300 ml-2">Go<span class="text-yellow-400">Hire</span></a>
         
         <div class="relative w-1/3 group">
-            <form action="/search" method="POST" id="search-form"></form><input id="search-space" type="text" placeholder="Search for Opportunities" name="parsedValue" class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700">
+            <form action="/search" method="POST" id="search-form" autocomplete="off"><input id="search-space" type="text" placeholder="Search for Opportunities" name="parsedValue" class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700" required></form>
             <div class="absolute right-3 top-3.5 text-yellow-500">
                 <a href="/search" id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="4">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -203,6 +203,15 @@
             document.getElementById("search-form").submit();
         }
     });
+
+    document.getElementById('searchForm').addEventListener('submit', function(event) {
+    event.preventDefault();  // Prevent default form submission
+
+    const inputValue = document.getElementById('searchInput').value.trim();
+    if (!inputValue) {
+        alert("Please enter a search term.");
+        return;
+    }})
 </script>
 </body>
 <footer class="mt-44">
