--- a/recruiter-server/views/companies.ejs
+++ b/recruiter-server/views/companies.ejs
@@ -38,7 +38,12 @@
                             </td>
                             <td class="px-6 py-4 border border-gray-300"><%= company.location %></td>
                             <td class="px-6 py-4 border border-gray-300">
-                                <button class="text-blue-500 hover:underline">View</button>
+                                <form action="/recruiter/delete-company/<%= company.companyName %>" method="POST">
+                                    <button type="submit" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">
+                                        Delete
+                                      </button>
+                                      
+                                </form>
                             </td>
                         </tr>
                     <% }) %>
