--- a/recruiter-server/views/internships.ejs
+++ b/recruiter-server/views/internships.ejs
@@ -25,6 +25,7 @@
                     <th class="px-6 py-3 border border-gray-300">Duration</th>
                     <th class="px-6 py-3 border border-gray-300">Opportunities</th>
                     <th class="px-6 py-3 border border-gray-300">Action</th>
+                    <th class="px-6 py-3 border border-gray-300">Applications</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,7 +41,19 @@
                             <td class="px-6 py-4 border border-gray-300"><%= internships[i].intDuration %></td>
                             <td class="px-6 py-4 border border-gray-300"><%= internships[i].intPositions %></td>
                             <td class="px-6 py-4 border border-gray-300">
-                                <button class="text-blue-500 hover:underline">View</button>
+                                <form action="/recruiter/delete-intern/<%= internships[i].intTitle %>" method="POST">
+                                    <button type="submit" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">
+                                        Delete
+                                      </button>
+                                      
+                                </form>
+                            </td>
+                            <td class="px-6 py-4 border border-gray-300">
+                                <form action="/recruiter/applicant-intern/<%= internships[i].intTitle %>" method="POST">
+                                    <button type="submit" class="bg-blue-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                                        View Applications
+                                    </button>
+                                </form>
                             </td>
                         </tr>
                     <% } %>
