--- a/recruiter-server/views/layout/header.ejs
+++ b/recruiter-server/views/layout/header.ejs
@@ -40,6 +40,26 @@
       background: linear-gradient(to right, #e8f484,#a1c9fa );
     }
 
+    @media (max-width: 767px) {
+    nav ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      background-color: #1d4ed8;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      padding: 1rem;
+    }
+    nav ul li {
+      margin: 0.5rem 0;
+    }
+    .nav-toggle {
+      display: block;
+      cursor: pointer;
+    }
+  }
+
   </style>
 </head>
 <body class="blue-bg-light font-sans">
@@ -56,10 +76,11 @@
           <li><a href="/recruiter/internships" class="hover:text-blue-900 font-medium transition-colors duration-300">Internships</a></li>
           <li class="flex items-center space-x-2">
             <a href="/recruiter/profile" class="hover:text-blue-900 font-medium transition-colors duration-300">
-              <img src="<%= user.profileImage || '/uploads/profiles/deafault-image.jpg' %>" alt="Profile" 
-     class="w-8 h-8 rounded-full bg-gray-200 profile-image" />
+              <img src="<%= user && user.profileImage ? user.profileImage : '/uploads/profiles/deafault-image.jpg' %>" 
+                   alt="Profile" class="w-8 h-8 rounded-full bg-gray-200 profile-image" />
             </a>
           </li>
+          
         </ul>
       </nav>
     </div>
