--- a/applicant-server/views/layout/footer.ejs
+++ b/applicant-server/views/layout/footer.ejs
@@ -1,6 +1,7 @@
-<footer>
-  <div class="footerbox">
-    <p>&copy; 2025 Go Hire. All rights reserved.</p>
+<footer class="bg-gray-900 text-white py-8">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-col items-center justify-center space-y-4">
+      <p class="text-sm text-gray-400">&copy; 2025 GoHire. All rights reserved.</p>     
   </div>
 </footer>
 
