apply for job, intern page

--- a/applicant-server/views/home.ejs
+++ b/applicant-server/views/home.ejs
@@ -35,7 +35,7 @@
     <div class="container mx-auto px-6 relative z-10">
         <div class="flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 text-center md:text-left transform transition-all duration-700 translate-y-8 opacity-0 text-black" id="header-text">
-                <h1 class="text-5xl font-bold leading-tight"><%= appUsers[0].firstName%> <span class="text-yellow-300">Career</span> Potential</h1>
+                <h1 class="text-5xl font-bold leading-tight"> Unlock Seemless <span class="text-yellow-300">Career</span> Potential</h1>
                 <p class="text-xl mt-6 text-blue-100 max-w-lg">Explore opportunities from across the globe to grow, showcase skills, gain CV points & get hired by your dream company.</p>
                 <div class="mt-8 flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 justify-center md:justify-start">
                     <a href="/jobs" class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-bold py-3 px-8 rounded-full transition-all duration-300 hover:shadow-xl transform hover:-translate-y-1">Find Jobs</a>
