recruiter server done

--- a/recruiter-server/views/companies.ejs
+++ b/recruiter-server/views/companies.ejs
@@ -13,7 +13,7 @@
 
 <h2 class="font-bold mt-10 flex justify-center font-sans text-xl">Here is your list of recently added Companies</h2>
 
-<section class="my-10 flex justify-center">
+<section class="my-10 flex justify-center mb-36">
     <div class="w-full max-w-4xl">
         <table class="w-full text-left border-collapse border border-gray-300">
             <thead>
