--- a/recruiter-server/views/home.ejs
+++ b/recruiter-server/views/home.ejs
@@ -100,19 +100,19 @@
     <div class="container mx-auto px-4">
       <div class="grid grid-cols-1 md:grid-cols-5 gap-8 text-center">
         <div>
-          <p class="text-4xl font-bold mb-2">500+</p>
+          <p class="text-4xl font-bold mb-2"><%= companies.length %></p>
           <p class="text-blue-800 font-bold">Companies</p>
         </div>
         <div>
-          <p class="text-4xl font-bold mb-2">10,000+</p>
+          <p class="text-4xl font-bold mb-2"><%= jobs.length %></p>
           <p class="text-blue-800 font-bold">Jobs Posted</p>
         </div>
         <div>
-          <p class="text-4xl font-bold mb-2">30,000+</p>
+          <p class="text-4xl font-bold mb-2"><%= internships.length %></p>
           <p class="text-blue-800 font-bold">Internships Offered</p>
         </div>
         <div>
-          <p class="text-4xl font-bold mb-2">250,000+</p>
+          <p class="text-4xl font-bold mb-2">250+</p>
           <p class="text-blue-800 font-bold">Candidates</p>
         </div>
         <div>
