--- a/admin-server/views/home.ejs
+++ b/admin-server/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('layout/header') %>
 
-<section class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8 mx-auto">
+<section class="min-h-screen flex items-center justify-center bg-indigo-50 py-12 px-4 sm:px-6 lg:px-8 mx-auto">
   <div class="max-w-4xl w-full space-y-8">
     <div class="text-center">
       <h2 class="text-3xl font-extrabold text-gray-900">Dashboard</h2>
